<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >

    <string name="banner_ad_unit_id__main">ca-app-pub-2332044383249316/4037951988</string>
    <string name="banner_ad_unit_id__alarm">ca-app-pub-2332044383249316/5514685189</string>

    <string name="title__app_name">Medicine Notebook</string>
    <string name="title__menu">Menu</string>
    <string name="title__dialog">Message</string>
    <string name="title__dialog_error">Error</string>
    <string name="title__dialog_medicine_select">Select Medicine</string>
    <string name="title__screen_schedule_list">Schedule</string>
    <string name="title__screen_schedule_add">Add Schedule</string>
    <string name="title__screen_schedule_edit">Schedule Details</string>
    <string name="title__screen_family_member_list">Family Members</string>
    <string name="title__screen_family_member_add">Add Family Member</string>
    <string name="title__screen_family_member_edit">Edit Family Member</string>
    <string name="title__screen_medicine_list">Medicines</string>
    <string name="title__screen_medicine_add">Add Medicine</string>
    <string name="title__screen_medicine_edit">Edit Medicine</string>
    <string name="title__screen_medicine_category_list">Categories</string>
    <string name="title__screen_medicine_category_add">Add Category</string>
    <string name="title__screen_medicine_category_edit">Edit Category</string>
    <string name="title__screen_medicine_time_list">Time</string>
    <string name="title__screen_medicine_time_add">Add Time</string>
    <string name="title__screen_medicine_time_edit">Edit Time</string>
    <string name="title__screen_medicine_interval_list">Intervals</string>
    <string name="title__screen_medicine_interval_add">Add Interval</string>
    <string name="title__screen_medicine_interval_edit">Edit Interval</string>
    <string name="title__screen_prescription_list">Prescriptions</string>
    <string name="title__screen_prescription_add">Add Prescription</string>
    <string name="title__screen_prescription_edit">Edit Prescription</string>
    <string name="title__screen_settings">Setting</string>
    <string name="title__screen_medicine_information">Medicine Information</string>

    <string name="menu_item__add">Add</string>
    <string name="menu_item__delete">Delete</string>

    <string name="lbl__family_member_name">Family:</string>
    <string name="lbl__medicine_name">Medicine:</string>
    <string name="lbl__medicine_category_name">Category:</string>
    <string name="lbl__medicine_time_name">Time:</string>
    <string name="lbl__medicine_time_value">Value:</string>
    <string name="lbl__medicine_interval_name">Interval:</string>
    <string name="lbl__medicine_interval_value">Value:</string>
    <string name="lbl__picture">Picture:</string>
    <string name="lbl__note">Note:</string>
    <string name="lbl__dose">Dose:</string>
    <string name="lbl__start_date">Start Date:</string>
    <string name="lbl__alarm">Alarm:</string>
    <string name="lbl__times">Medicine-Taking Times:</string>
    <string name="lbl__name">Name:</string>
    <string name="lbl__date">Date:</string>
    <string name="lbl__language">Language:</string>
    <string name="lbl__select">Select</string>
    <string name="lbl__on">On</string>
    <string name="lbl__off">Off</string>
    <string name="lbl__empty">There is no data to show.</string>
    <string name="lbl__no_camera">Could not access the camera in your device.</string>
    <string name="lbl__day_unit">day(s)</string>

    <string name="hint__family_member_name">Mom</string>
    <string name="hint__medicine_name">Panadol</string>
    <string name="hint__medicine_note">Note about the medicine.</string>
    <string name="hint__medicine_category_name">Psychosomatic</string>
    <string name="hint__medicine_category_note">Note about the medicine category.</string>
    <string name="hint__medicine_time_name">Breakfast</string>
    <string name="hint__medicine_interval_name">Everyday</string>
    <string name="hint__medicine_interval_value">1</string>
    <string name="hint__times">1</string>
    <string name="hint__schedule_note">Note about the schedule.</string>
    <string name="hint__dose">1 tablet</string>
    <string name="hint__name">Name</string>
    <string name="hint__prescription_note">Note about the prescription.</string>

    <string name="btn__add">Add</string>
    <string name="btn__edit">Edit</string>
    <string name="btn__delete">Delete</string>
    <string name="btn__select">Select</string>
    <string name="btn__capture">Capture</string>
    <string name="btn__back">Back</string>
    <string name="btn__ok">OK</string>
    <string name="btn__no">No</string>
    <string name="btn__cancel">Cancel</string>

    <string name="message__initialization">Initializing...</string>
    <string name="message__insert_successful">Data has been saved.</string>
    <string name="message__edit_successful">Data has been edited.</string>
    <string name="message__delete_successful">Data has been deleted.</string>

    <string name="confirmation__delete_data">Are you sure you want to delete the selected data?</string>

    <string name="error__blank_family_member_name">Please enter your family member.</string>
    <string name="error__blank_medicine_name">Please enter medicine.</string>
    <string name="error__blank_medicine_category_name">Please enter medicine category.</string>
    <string name="error__blank_medicine_time_name">Please enter medicine time.</string>
    <string name="error__blank_medicine_time_value">Please enter time value.</string>
    <string name="error__invalid_medicine_time_value">Please enter valid time for time value.</string>
    <string name="error__blank_medicine_interval_name">Please enter medicine interval.</string>
    <string name="error__blank_medicine_interval_value">Please enter interval value.</string>
    <string name="error__invalid_medicine_interval_value">Please enter a positive number for interval value.</string>
    <string name="error__blank_family_member">Please select family member.</string>
    <string name="error__blank_medicine">Please select medicine.</string>
    <string name="error__blank_dose">Please enter dose.</string>
    <string name="error__invalid_start_date">Please enter valid date for start date.</string>
    <string name="error__blank_medicine_time">Please select time.</string>
    <string name="error__blank_medicine_interval">Please select interval.</string>
    <string name="error__invalid_times">Please enter a positive number for times.</string>
    <string name="error__blank_prescription_name">Please enter name of the prescription.</string>
    <string name="error__duplicated_data">Same data already exists.</string>
    <string name="error__no_data_selected">You have not selected anything.</string>
    <string name="error__image_save_failed">An error has occurred. The picture could not be saved.</string>
    <string name="error__unknown_error">An error has occurred. The operation could not be completed.</string>

    <string name="desc__logo">Logo</string>
    <string name="desc__menu_item_icon">Menu item icon</string>
    <string name="desc__navigation_drawer_open">Open navigation drawer</string>
    <string name="desc__navigation_drawer_close">Close navigation drawer</string>
    <string name="desc__captured_picture">Captured picture</string>
    <string name="desc__medicine_picture">Medicine picture</string>
    <string name="desc__prescription_picture">Prescription picture</string>
    <string name="desc__image_done">Done</string>
    <string name="desc__image_button_add">Add</string>
    <string name="desc__image_button_delete">Delete</string>
    <string name="desc__image_button_next">Next</string>
    <string name="desc__image_button_previous">Previous</string>

    <plurals name="lbl__day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

</resources>
