<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000">

    <ImageView
        android:id="@+id/imgCapturedPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/desc__captured_picture"/>

    <RelativeLayout
        android:id="@+id/covBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ff000000">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:minWidth="100dp"
                android:text="@string/btn__back"/>

            <Button
                android:id="@+id/btnOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btnBack"
                android:minWidth="100dp"
                android:text="@string/btn__ok"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>